--- a/index.html
+++ b/index.html
@@ -89,28 +89,7 @@
       color: var(--primary);
     }
 
-    /* Hero */
-    .hero {
-      background: linear-gradient(160deg, var(--secondary), var(--primary));
-      padding: 5rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      color: var(--accent);
-      font-weight: 700;
-    }
-
-    .hero p {
-      color: #dfe6ff;
-    }
-
-    .hero .card {
-      background: rgba(255,255,255,0.08);
-      border: 1px solid rgba(255,255,255,0.2);
-      color: #fff;
-    }
-
+    
     /* About */
     #about {
       background: #ffffff;
@@ -234,15 +213,365 @@
   </div>
 </nav>
 
-<!-- HERO -->
-<section id="home" class="hero text-white" data-aos="fade-up">
-  <div class="container py-5">
-    <h1 class="display-5">Noorussalam Madrasa — Knowledge, Character & Service</h1>
-    <p class="lead mb-4">Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.</p>
-    <a href="forms.html" class="btn btn-primary btn-lg m-2">Join Admissions</a>
-    <a href="#about" class="btn btn-outline-secondary btn-lg m-2">Learn More</a>
+<!-- ===== PREMIUM ISLAMIC HERO (Option D: Decorative Silhouette) ===== -->
+<section id="hero-premium" aria-label="Noorussalam Madrasa hero" class="hero-premium">
+  <!-- geometric pattern (SVG) -->
+  <svg class="pattern" aria-hidden="true" viewBox="0 0 800 400" preserveAspectRatio="xMidYMid slice">
+    <defs>
+      <pattern id="geom" x="0" y="0" width="80" height="80" patternUnits="userSpaceOnUse">
+        <rect width="80" height="80" fill="rgba(255,255,255,0.02)"></rect>
+        <path d="M40 0 L80 20 L40 40 L0 20 Z" fill="rgba(255,255,255,0.03)"></path>
+      </pattern>
+      <linearGradient id="heroGrad" x1="0" x2="1">
+        <stop offset="0" stop-color="#022a66"/>
+        <stop offset="0.5" stop-color="#003a88"/>
+        <stop offset="1" stop-color="#001f4f"/>
+      </linearGradient>
+    </defs>
+    <rect width="100%" height="100%" fill="url(#heroGrad)"></rect>
+    <rect width="100%" height="100%" fill="url(#geom)" opacity="0.7"></rect>
+  </svg>
+
+  <!-- golden halo glow (behind content) -->
+  <div class="halo" aria-hidden="true"></div>
+
+  <!-- Arabic calligraphy watermark (Bismillah) -->
+  <svg class="calligraphy" viewBox="0 0 800 200" aria-hidden="true" preserveAspectRatio="xMidYMid meet">
+    <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-family="serif"
+          font-size="48" fill="rgba(255, 204, 0, 0.08)">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ</text>
+  </svg>
+
+  <!-- animated crescent + star cluster -->
+  <div class="moon-wrap" aria-hidden="true">
+    <svg class="crescent" viewBox="0 0 200 200" width="220" height="220" role="img" aria-hidden="true">
+      <!-- outer glow -->
+      <defs>
+        <filter id="softGlow" x="-50%" y="-50%" width="200%" height="200%">
+          <feGaussianBlur stdDeviation="18" result="b"/>
+          <feMerge><feMergeNode in="b"/><feMergeNode in="SourceGraphic"/></feMerge>
+        </filter>
+      </defs>
+
+      <g filter="url(#softGlow)">
+        <path d="M136 20c-40-5-78 18-96 52 14-6 30-8 46-4 34 10 59 45 56 80 32-32 38-88-6-128z"
+              fill="#ffd24d" opacity="0.95"/>
+      </g>
+      <circle cx="160" cy="40" r="3.5" fill="#fff2c4" />
+    </svg>
   </div>
+
+  <!-- star field - many span elements for twinkle -->
+  <div class="stars" aria-hidden="true">
+    <!-- generate a bunch of stars; each .star uses different CSS variables to vary position/size/speed -->
+    <span class="star" style="--x:5%; --y:12%; --s:1.6; --d:0s;"></span>
+    <span class="star" style="--x:12%; --y:20%; --s:0.9; --d:0.6s;"></span>
+    <span class="star" style="--x:18%; --y:6%; --s:1.1; --d:1.1s;"></span>
+    <span class="star" style="--x:28%; --y:28%; --s:0.45; --d:1.9s;"></span>
+    <span class="star" style="--x:36%; --y:8%; --s:0.8; --d:2.3s;"></span>
+    <span class="star" style="--x:44%; --y:18%; --s:0.6; --d:0.9s;"></span>
+    <span class="star" style="--x:53%; --y:9%; --s:1.4; --d:0.2s;"></span>
+    <span class="star" style="--x:64%; --y:26%; --s:0.7; --d:1.4s;"></span>
+    <span class="star" style="--x:72%; --y:12%; --s:1.2; --d:0.8s;"></span>
+    <span class="star" style="--x:82%; --y:24%; --s:0.5; --d:2.0s;"></span>
+    <span class="star" style="--x:88%; --y:6%; --s:0.95; --d:1.8s;"></span>
+
+    <!-- some lower stars -->
+    <span class="star" style="--x:10%; --y:50%; --s:0.55; --d:2.5s;"></span>
+    <span class="star" style="--x:22%; --y:46%; --s:0.7; --d:1.2s;"></span>
+    <span class="star" style="--x:37%; --y:48%; --s:0.6; --d:0.6s;"></span>
+    <span class="star" style="--x:50%; --y:56%; --s:0.9; --d:1.7s;"></span>
+    <span class="star" style="--x:68%; --y:46%; --s:0.5; --d:2.2s;"></span>
+    <span class="star" style="--x:80%; --y:52%; --s:0.8; --d:0.4s;"></span>
+    <span class="star" style="--x:92%; --y:40%; --s:0.6; --d:1.3s;"></span>
+  </div>
+
+  <!-- main textual content -->
+  <div class="hero-content" role="region" aria-label="Hero content">
+    <div class="brand">
+      <svg width="46" height="46" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path fill="#ffd24d" d="M12 2L3 6v6c0 5 4 9 9 9s9-4 9-9V6l-9-4z"></path>
+      </svg>
+      <div>
+        <div class="brand-title">NOORUSSALAM MADRASA</div>
+        <div class="brand-sub">Kambippalam, Kerala Estate</div>
+      </div>
+    </div>
+
+    <h1 class="hero-heading">
+      Noorussalam Madrasa — Knowledge, Character & Service
+    </h1>
+
+    <p class="hero-lead">
+      Combining traditional Islamic studies with modern education — preparing students for both Deen and Dunya.
+    </p>
+
+    <div class="hero-ctas">
+      <a href="#admissions" class="btn primary">Join Admissions</a>
+      <a href="#about" class="btn outline">Learn More</a>
+    </div>
+  </div>
+
+  <!-- decorative mosque silhouette SVG at bottom -->
+  <svg class="mosque-silhouette" viewBox="0 0 1200 160" preserveAspectRatio="none" role="img" aria-hidden="true">
+    <defs>
+      <linearGradient id="mosqueGrad" x1="0" x2="1">
+        <stop offset="0" stop-color="#ffd24d" stop-opacity="0.12"/>
+        <stop offset="1" stop-color="#ffd24d" stop-opacity="0.06"/>
+      </linearGradient>
+    </defs>
+    <!-- stylized ornamental border silhouette -->
+    <path d="M0 40 C40 10, 120 10, 160 40 C200 70, 280 70, 320 40 C360 10, 440 10, 480 40 C520 70, 600 70, 640 40
+             C680 10, 760 10, 800 40 C840 70, 920 70, 960 40 C1000 10, 1080 10, 1120 40 C1160 70, 1200 70, 1200 120
+             L1200 160 L0 160 Z"
+          fill="url(#mosqueGrad)"></path>
+
+    <!-- ornate mosque elements -->
+    <g transform="translate(60,8)" fill="#ffd24d" opacity="0.95">
+      <path d="M80 60 C80 30 120 10 160 30 C160 30 160 30 160 30 L160 100 L80 100 Z"></path>
+      <path d="M320 40 L340 20 L360 40 L360 100 L320 100 Z"></path>
+      <path d="M520 50 C520 30 560 20 600 40 C640 60 680 40 680 40 L680 100 L520 100 Z"></path>
+      <path d="M880 40 L900 24 L920 40 L920 100 L880 100 Z"></path>
+    </g>
+  </svg>
+
 </section>
+
+<!-- ====================== Styles ====================== -->
+<style>
+  :root{
+    --blue-1:#022a66;
+    --blue-2:#003a88;
+    --blue-3:#001f4f;
+    --gold:#ffd24d;
+    --muted-white: rgba(255,255,255,0.92);
+  }
+
+  .hero-premium{
+    position: relative;
+    overflow: hidden;
+    color: white;
+    min-height: 76vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 48px 22px 0;
+    box-sizing: border-box;
+    background: linear-gradient(180deg,var(--blue-1), var(--blue-2) 45%, var(--blue-3) 100%);
+    font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+  }
+
+  /* SVG background pattern sized and positioned */
+  .hero-premium .pattern{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    pointer-events:none;
+    z-index:0;
+    mix-blend-mode: overlay;
+  }
+
+  /* halo behind content */
+  .hero-premium .halo{
+    position:absolute;
+    width:680px;
+    height:680px;
+    left:50%;
+    top:28%;
+    transform:translateX(-50%);
+    background: radial-gradient(circle at 40% 35%, rgba(255,210,77,0.20), rgba(255,210,77,0.06) 30%, transparent 60%);
+    border-radius:50%;
+    filter: blur(46px);
+    z-index:1;
+    animation: haloPulse 6s ease-in-out infinite;
+    pointer-events:none;
+  }
+
+  @keyframes haloPulse{
+    0% { transform: translateX(-50%) scale(1); opacity:0.7;}
+    50%{ transform: translateX(-50%) scale(1.08); opacity:1;}
+    100%{ transform: translateX(-50%) scale(1); opacity:0.7;}
+  }
+
+  /* calligraphy watermark */
+  .hero-premium .calligraphy{
+    position:absolute;
+    width:80%;
+    left:10%;
+    top:10%;
+    z-index:1;
+    pointer-events:none;
+    transform: translateY(-10px);
+  }
+
+  /* moon */
+  .hero-premium .moon-wrap{
+    position:absolute;
+    right:8%;
+    top:6%;
+    z-index:2;
+    transform-origin:center;
+    animation: moonFloat 8s ease-in-out infinite;
+    pointer-events:none;
+  }
+
+  @keyframes moonFloat{
+    0%{ transform: translateY(0) rotate(0);}
+    50%{ transform: translateY(-12px) rotate(-2deg);}
+    100%{ transform: translateY(0) rotate(0);}
+  }
+
+  .hero-premium .crescent path{
+    stroke: none;
+    transform-origin:center;
+    animation: crescentShine 3.8s linear infinite;
+  }
+  @keyframes crescentShine{
+    0%{ filter: drop-shadow(0 0 6px rgba(255,210,77,0.55)); }
+    50%{ filter: drop-shadow(0 0 16px rgba(255,210,77,0.9)); }
+    100%{ filter: drop-shadow(0 0 6px rgba(255,210,77,0.55)); }
+  }
+
+  /* Stars */
+  .hero-premium .stars{ position:absolute; inset:0; z-index:2; pointer-events:none; }
+  .hero-premium .star{
+    position:absolute;
+    left:var(--x);
+    top:var(--y);
+    width:calc(4px * var(--s));
+    height:calc(4px * var(--s));
+    background: radial-gradient(circle at 35% 35%, #fff, rgba(255,255,255,0.85));
+    border-radius:50%;
+    opacity:0;
+    box-shadow: 0 0 calc(6px * var(--s)) rgba(255,240,200,0.35);
+    transform: translateY(0);
+    animation: starTwinkle calc(3.6s * var(--s)) ease-in-out infinite;
+    animation-delay: var(--d);
+  }
+  @keyframes starTwinkle{
+    0% { opacity:0; transform:translateY(6px) scale(0.85); filter: blur(0); }
+    35% { opacity:1; transform:translateY(-2px) scale(1); filter: blur(0.6px); }
+    70% { opacity:0.6; transform:translateY(-6px) scale(0.95); filter: blur(0.3px);}
+    100% { opacity:0; transform:translateY(6px) scale(0.9); }
+  }
+
+  /* content block */
+  .hero-premium .hero-content{
+    position:relative;
+    z-index:3;
+    text-align:center;
+    max-width:1100px;
+    margin: 24px auto 48px;
+    padding: 24px 28px;
+    box-sizing:border-box;
+  }
+
+  .hero-premium .brand{
+    display:flex;
+    align-items:center;
+    gap:14px;
+    justify-content:center;
+    margin-bottom: 22px;
+  }
+  .brand-title{
+    font-weight:800;
+    letter-spacing:0.6px;
+    color:var(--gold);
+    font-size:0.95rem;
+  }
+  .brand-sub{
+    color:rgba(255,255,255,0.8);
+    font-size:0.82rem;
+    margin-top:2px;
+  }
+
+  .hero-heading{
+    font-size:clamp(1.6rem, 3.6vw, 3.2rem);
+    line-height:1.08;
+    font-weight:800;
+    color:var(--gold);
+    margin:6px 0 14px;
+    text-wrap:balance;
+  }
+
+  .hero-lead{
+    color: rgba(235,245,255,0.9);
+    max-width:760px;
+    margin: 0 auto;
+    font-size:clamp(0.95rem, 1.2vw, 1.15rem);
+    font-weight:500;
+    letter-spacing:0.1px;
+  }
+
+  .hero-ctas{
+    margin-top:22px;
+    display:flex;
+    gap:12px;
+    justify-content:center;
+    align-items:center;
+    flex-wrap:wrap;
+  }
+
+  .btn{
+    display:inline-block;
+    padding:12px 26px;
+    border-radius:28px;
+    text-decoration:none;
+    font-weight:700;
+    transition: transform .22s cubic-bezier(.2,.9,.2,1), box-shadow .22s;
+    box-shadow: none;
+  }
+
+  .btn.primary{
+    background:linear-gradient(180deg, #ffd24d, #f4bd2a);
+    color:#04224b;
+    box-shadow: 0 8px 30px rgba(255, 195, 50, 0.18);
+  }
+  .btn.primary:hover{ transform:translateY(-4px); box-shadow:0 14px 48px rgba(255,195,50,0.22); }
+
+  .btn.outline{
+    border:2px solid rgba(255,210,77,0.95);
+    color:var(--gold);
+    background: transparent;
+  }
+  .btn.outline:hover{ background: rgba(255,210,77,0.06); transform:translateY(-3px); }
+
+  /* mosque silhouette */
+  .hero-premium .mosque-silhouette{
+    position:absolute;
+    left:0;
+    bottom:0;
+    width:100%;
+    height:140px;
+    z-index:4;
+    pointer-events:none;
+    transform:translateY(12px);
+  }
+
+  /* responsive tweaks */
+  @media (max-width: 900px){
+    .hero-premium .moon-wrap{ right:4%; top:4%; transform:scale(0.9); }
+    .hero-premium .halo{ width:520px; height:520px; top:20%; }
+  }
+
+  @media (max-width: 640px){
+    .hero-premium{ padding-top:36px; min-height:70vh; }
+    .hero-premium .moon-wrap{ display:none; } /* hide moon on very small screens for clarity */
+    .hero-premium .calligraphy{ display:none; }
+    .hero-premium .brand{ gap:10px; margin-bottom:12px; }
+    .hero-heading{ font-size:1.6rem; }
+    .hero-lead{ font-size:0.95rem; max-width:88%; }
+    .hero-premium .mosque-silhouette{ height:120px; transform:translateY(6px); }
+  }
+
+  /* reduce motion preference */
+  @media (prefers-reduced-motion: reduce){
+    .hero-premium .halo,
+    .hero-premium .moon-wrap,
+    .hero-premium .crescent path,
+    .hero-premium .star { animation: none; }
+  }
+</style>
 
 
 <!-- 🌟 Class Toppers Section -->
@@ -812,6 +1141,7 @@
 
 </body>
 </html>
+
 
 
 
