--- a/index.html
+++ b/index.html
@@ -294,11 +294,12 @@
       <div>
         <div class="brand-title">NOORUSSALAM MADRASA</div>
         <div class="brand-sub">Kambippalam, Kerala Estate</div>
+        <div class="brand-sub">Under SKIMVB Reg No:6110</div>
       </div>
     </div>
 
     <h1 class="hero-heading">
-      Noorussalam Madrasa — Knowledge, Character & Service
+      NSM - Knowledge, Character & Service
     </h1>
 
     <p class="hero-lead">
@@ -306,7 +307,7 @@
     </p>
 
     <div class="hero-ctas">
-      <a href="#admissions" class="btn primary">Join Admissions</a>
+      <a href="maintenance.html" class="btn primary">Join Admissions</a>
       <a href="#about" class="btn outline">Learn More</a>
     </div>
   </div>
@@ -1141,6 +1142,7 @@
 
 </body>
 </html>
+
 
 
 
