--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#home" target="_blank">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
@@ -309,6 +308,7 @@
     <div class="hero-ctas">
       <a href="maintenance.html" class="btn primary">Join Admissions</a>
       <a href="#about" class="btn outline">Learn More</a>
+      <a href="result.html" class="btn secondary">Results</a>
     </div>
   </div>
 
@@ -1142,6 +1142,7 @@
 
 </body>
 </html>
+
 
 
 
