--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <div class="hero-ctas">
       <a href="maintenance.html" class="btn primary">Join Admissions</a>
       <a href="#about" class="btn outline">Learn More</a>
-      <a href="result.html" class="btn secondary">Results</a>
+      <a href="result.html" class="btn outline">Results</a>
     </div>
   </div>
 
@@ -1142,6 +1142,7 @@
 
 </body>
 </html>
+
 
 
 
