--- a/result.html
+++ b/result.html
@@ -12,58 +12,127 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <style>
+    /* Body & Background */
     body {
-      background: linear-gradient(135deg, #0b5ed7, #0d6efd);
+      background: linear-gradient(135deg, #3a8cff, #0d6efd);
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #fff;
       font-family: 'Rubik', sans-serif;
+      padding: 20px;
+      color: #fff;
     }
 
+    /* Result Box */
     .result-box {
       background: #fff;
       color: #333;
-      border-radius: 15px;
-      padding: 40px;
+      border-radius: 20px;
+      padding: 40px 30px;
       text-align: center;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      max-width: 500px;
-      width: 90%;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+      max-width: 480px;
+      width: 100%;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 0.8s forwards;
     }
 
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Heading & Text */
     .result-box h1 {
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
       color: #0b5ed7;
+      font-size: 1.8rem;
     }
 
     .result-box p {
       color: #6c757d;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
+      font-size: 1rem;
     }
 
+    /* Buttons */
     .btn-success {
-      border-radius: 8px;
+      border-radius: 10px;
       padding: 12px 28px;
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
+      transition: all 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+    }
+
+    /* Glow effect */
+    .btn-success::before {
+      content: "";
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      width: calc(100% + 10px);
+      height: calc(100% + 10px);
+      border-radius: 12px;
+      background: rgba(0, 123, 255, 0.3);
+      filter: blur(8px);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      z-index: -1;
+    }
+
+    .btn-success:hover::before {
+      opacity: 1;
     }
 
     .btn-success:hover {
       transform: translateY(-3px);
-      transition: 0.3s ease;
-      box-shadow: 0 6px 12px rgba(25, 135, 84, 0.3);
+      box-shadow: 0 8px 20px rgba(25, 135, 84, 0.5);
     }
 
+    /* Icon Glow on Hover */
+    .btn-success i {
+      transition: text-shadow 0.3s ease;
+    }
+
+    .btn-success:hover i {
+      text-shadow: 0 0 8px rgba(255,255,255,0.8), 0 0 12px rgba(0,123,255,0.6);
+    }
+
+    /* Outline Button */
+    .btn-outline-primary {
+      border-radius: 8px;
+      padding: 10px 25px;
+      transition: all 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
+    }
+
+    /* Footer */
     footer {
-      position: absolute;
-      bottom: 15px;
-      width: 100%;
+      margin-top: 30px;
       text-align: center;
       color: rgba(255, 255, 255, 0.8);
       font-size: 0.9rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 576px) {
+      .result-box h1 {
+        font-size: 1.5rem;
+      }
+      .btn-success {
+        font-size: 0.95rem;
+        padding: 10px 20px;
+      }
     }
   </style>
 </head>
@@ -74,21 +143,23 @@
     <p>Click below to view your latest examination results.</p>
 
     <a href="coming-soon.html" 
-       class="btn btn-success btn-lg" 
-       target="_blank">
-       <i class="fa-solid fa-graduation-cap me-2"></i> View Results
+       class="btn btn-success btn-lg mb-3 w-100" 
+       target="_blank" rel="noopener noreferrer">
+       <i class="fa-solid fa-graduation-cap me-2"></i> Final Examination Result
     </a>
-  <!-- BACK TO HOME -->
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
-      </div>
+
+    <a href="coming-soon.html" 
+       class="btn btn-success btn-lg w-100 mb-3" 
+       target="_blank" rel="noopener noreferrer">
+       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Exam
+    </a>
+
+    <div class="text-center mt-4">
+      <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
     </div>
-  </section>
+  </div>
+
   <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
 
 </body>
 </html>
-
-
-
-
