--- a/result.html
+++ b/result.html
@@ -14,29 +14,45 @@
   <style>
     /* Body & Background */
     body {
-      background: linear-gradient(135deg, #3a8cff, #0d6efd);
+      margin: 0;
       min-height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       font-family: 'Rubik', sans-serif;
+      background: linear-gradient(-45deg, #3a8cff, #0d6efd, #0056b3, #3a8cff);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
       padding: 20px;
       color: #fff;
     }
 
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
     /* Result Box */
     .result-box {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.95);
       color: #333;
-      border-radius: 20px;
+      border-radius: 25px;
       padding: 40px 30px;
       text-align: center;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 15px 40px rgba(0,0,0,0.25);
       max-width: 480px;
       width: 100%;
       opacity: 0;
-      transform: translateY(20px);
+      transform: translateY(30px);
       animation: fadeInUp 0.8s forwards;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .result-box:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.3);
     }
 
     @keyframes fadeInUp {
@@ -49,38 +65,40 @@
     /* Heading & Text */
     .result-box h1 {
       font-weight: 700;
-      margin-bottom: 12px;
+      margin-bottom: 15px;
       color: #0b5ed7;
-      font-size: 1.8rem;
+      font-size: 2rem;
+      letter-spacing: 1px;
     }
 
     .result-box p {
-      color: #6c757d;
-      margin-bottom: 30px;
+      color: #495057;
+      margin-bottom: 35px;
       font-size: 1rem;
     }
 
     /* Buttons */
     .btn-success {
-      border-radius: 10px;
-      padding: 12px 28px;
-      font-size: 1rem;
+      border-radius: 12px;
+      padding: 12px 30px;
+      font-size: 1.05rem;
       font-weight: 600;
       transition: all 0.3s ease, box-shadow 0.3s ease;
       position: relative;
+      overflow: hidden;
+      z-index: 1;
     }
 
     /* Glow effect */
     .btn-success::before {
       content: "";
       position: absolute;
-      top: -5px;
-      left: -5px;
+      top: -5px; left: -5px;
       width: calc(100% + 10px);
       height: calc(100% + 10px);
-      border-radius: 12px;
-      background: rgba(0, 123, 255, 0.3);
-      filter: blur(8px);
+      border-radius: 14px;
+      background: rgba(0, 123, 255, 0.4);
+      filter: blur(10px);
       opacity: 0;
       transition: opacity 0.3s ease;
       z-index: -1;
@@ -92,7 +110,7 @@
 
     .btn-success:hover {
       transform: translateY(-3px);
-      box-shadow: 0 8px 20px rgba(25, 135, 84, 0.5);
+      box-shadow: 0 10px 25px rgba(0,123,255,0.5);
     }
 
     /* Icon Glow on Hover */
@@ -101,37 +119,48 @@
     }
 
     .btn-success:hover i {
-      text-shadow: 0 0 8px rgba(255,255,255,0.8), 0 0 12px rgba(0,123,255,0.6);
+      text-shadow: 0 0 10px rgba(255,255,255,0.8), 0 0 15px rgba(0,123,255,0.6);
     }
 
     /* Outline Button */
     .btn-outline-primary {
-      border-radius: 8px;
-      padding: 10px 25px;
-      transition: all 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 10px;
+      padding: 10px 28px;
+      transition: all 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+      color: #0d6efd;
+      border-color: #0d6efd;
     }
 
     .btn-outline-primary:hover {
       transform: translateY(-2px);
-      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
+      box-shadow: 0 8px 20px rgba(0,123,255,0.3);
+      color: #fff;
+      background-color: #0d6efd;
     }
 
     /* Footer */
     footer {
-      margin-top: 30px;
       text-align: center;
-      color: rgba(255, 255, 255, 0.8);
+      color: rgba(255, 255, 255, 0.85);
       font-size: 0.9rem;
+      margin-top: auto;
+      padding: 15px 0;
+      transition: color 0.3s ease, text-shadow 0.3s ease;
+    }
+
+    footer:hover {
+      color: #fff;
+      text-shadow: 0 0 5px #0d6efd;
     }
 
     /* Responsive */
     @media (max-width: 576px) {
       .result-box h1 {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
       }
       .btn-success {
         font-size: 0.95rem;
-        padding: 10px 20px;
+        padding: 10px 22px;
       }
     }
   </style>
