--- a/result.html
+++ b/result.html
@@ -24,8 +24,9 @@
       background: linear-gradient(-45deg, #3a8cff, #0d6efd, #0056b3, #3a8cff);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
-      padding: 20px;
+      padding: 40px 20px;
       color: #fff;
+      overflow: hidden; /* hide sparkles overflow */
     }
 
     @keyframes gradientBG {
@@ -34,20 +35,40 @@
       100% {background-position: 0% 50%;}
     }
 
+    /* Sparkles */
+    .sparkle {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 50%;
+      width: 5px;
+      height: 5px;
+      opacity: 0.8;
+      animation: sparkleAnim linear infinite;
+    }
+
+    @keyframes sparkleAnim {
+      0% {transform: translateY(0) scale(0.8); opacity: 0.8;}
+      50% {opacity: 1; scale: 1;}
+      100% {transform: translateY(-1000px) scale(0.5); opacity: 0;}
+    }
+
     /* Result Box */
     .result-box {
+      position: relative;
+      z-index: 2;
       background: rgba(255, 255, 255, 0.95);
       color: #333;
       border-radius: 25px;
-      padding: 40px 30px;
+      padding: 50px 35px;
       text-align: center;
       box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-      max-width: 480px;
+      max-width: 500px;
       width: 100%;
       opacity: 0;
       transform: translateY(30px);
       animation: fadeInUp 0.8s forwards;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      margin-bottom: 25px;
     }
 
     .result-box:hover {
@@ -73,14 +94,14 @@
 
     .result-box p {
       color: #495057;
-      margin-bottom: 35px;
+      margin-bottom: 40px;
       font-size: 1rem;
     }
 
     /* Buttons */
     .btn-success {
       border-radius: 12px;
-      padding: 12px 30px;
+      padding: 14px 32px;
       font-size: 1.05rem;
       font-weight: 600;
       transition: all 0.3s ease, box-shadow 0.3s ease;
@@ -89,7 +110,6 @@
       z-index: 1;
     }
 
-    /* Glow effect */
     .btn-success::before {
       content: "";
       position: absolute;
@@ -104,28 +124,15 @@
       z-index: -1;
     }
 
-    .btn-success:hover::before {
-      opacity: 1;
-    }
-
-    .btn-success:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,123,255,0.5);
-    }
-
-    /* Icon Glow on Hover */
-    .btn-success i {
-      transition: text-shadow 0.3s ease;
-    }
-
-    .btn-success:hover i {
-      text-shadow: 0 0 10px rgba(255,255,255,0.8), 0 0 15px rgba(0,123,255,0.6);
-    }
+    .btn-success:hover::before { opacity: 1; }
+    .btn-success:hover { transform: translateY(-3px); box-shadow: 0 10px 25px rgba(0,123,255,0.5); }
+    .btn-success i { transition: text-shadow 0.3s ease; }
+    .btn-success:hover i { text-shadow: 0 0 10px rgba(255,255,255,0.8), 0 0 15px rgba(0,123,255,0.6); }
 
     /* Outline Button */
     .btn-outline-primary {
       border-radius: 10px;
-      padding: 10px 28px;
+      padding: 12px 30px;
       transition: all 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
       color: #0d6efd;
       border-color: #0d6efd;
@@ -144,28 +151,26 @@
       color: rgba(255, 255, 255, 0.85);
       font-size: 0.9rem;
       margin-top: auto;
-      padding: 15px 0;
+      padding: 20px 0;
       transition: color 0.3s ease, text-shadow 0.3s ease;
     }
 
-    footer:hover {
-      color: #fff;
-      text-shadow: 0 0 5px #0d6efd;
-    }
+    footer:hover { color: #fff; text-shadow: 0 0 5px #0d6efd; }
 
     /* Responsive */
     @media (max-width: 576px) {
-      .result-box h1 {
-        font-size: 1.6rem;
-      }
-      .btn-success {
-        font-size: 0.95rem;
-        padding: 10px 22px;
-      }
+      body { padding: 30px 15px; }
+      .result-box { padding: 35px 25px; }
+      .result-box h1 { font-size: 1.6rem; }
+      .btn-success { font-size: 0.95rem; padding: 12px 24px; }
+      .btn-outline-primary { padding: 10px 22px; }
     }
   </style>
 </head>
 <body>
+
+  <!-- Sparkles -->
+  <div id="sparkles"></div>
 
   <div class="result-box">
     <h1>Final Examination Result 2025-26</h1>
@@ -189,6 +194,31 @@
   </div>
 
   <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
+
+  <script>
+    // Generate floating sparkles
+    const sparkleCount = 40;
+    const sparklesContainer = document.createElement('div');
+    sparklesContainer.style.position = 'absolute';
+    sparklesContainer.style.top = '0';
+    sparklesContainer.style.left = '0';
+    sparklesContainer.style.width = '100%';
+    sparklesContainer.style.height = '100%';
+    sparklesContainer.style.pointerEvents = 'none';
+    document.body.appendChild(sparklesContainer);
+
+    for (let i = 0; i < sparkleCount; i++) {
+      const sparkle = document.createElement('div');
+      sparkle.className = 'sparkle';
+      sparkle.style.left = Math.random() * 100 + 'vw';
+      sparkle.style.top = Math.random() * 100 + 'vh';
+      sparkle.style.width = 2 + Math.random() * 4 + 'px';
+      sparkle.style.height = sparkle.style.width;
+      sparkle.style.animationDuration = 5 + Math.random() * 10 + 's';
+      sparkle.style.opacity = Math.random();
+      sparklesContainer.appendChild(sparkle);
+    }
+  </script>
 
 </body>
 </html>
