Enhance result.html with new styles and heading
Updated styles and added a main heading to enhance the appearance of the results page.

--- a/result.html
+++ b/result.html
@@ -35,6 +35,27 @@
       100% {background-position: 0% 50%;}
     }
 
+    /* Main Heading with animated gradient */
+    .main-heading {
+      font-size: 2.4rem;
+      font-weight: 800;
+      text-align: center;
+      margin-bottom: 30px;
+      letter-spacing: 1px;
+      background: linear-gradient(90deg, #ffce00, #0ff, #ff6f61, #00ff9f);
+      background-size: 300% 300%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: glowGradient 5s ease infinite;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+
+    @keyframes glowGradient {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
     /* Sparkles */
     .sparkle {
       position: absolute;
@@ -46,7 +67,7 @@
       pointer-events: none;
     }
 
-    /* Result Box */
+    /* Result Box with pulsing glow */
     .result-box {
       position: relative;
       z-index: 2;
@@ -60,26 +81,32 @@
       width: 100%;
       opacity: 0;
       transform: translateY(30px);
-      animation: fadeInUp 0.8s forwards;
+      animation: fadeInUp 0.8s forwards, pulseCard 3s ease-in-out infinite;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       margin-bottom: 25px;
     }
 
     .result-box:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+      transform: translateY(-5px) scale(1.02);
+      box-shadow: 0 25px 60px rgba(0,123,255,0.35);
     }
 
     @keyframes fadeInUp {
       to {opacity: 1; transform: translateY(0);}
     }
 
-    /* Heading & Text */
-    .result-box h1 {
+    @keyframes pulseCard {
+      0% { transform: translateY(0px) scale(1); box-shadow: 0 15px 40px rgba(0,0,0,0.25); }
+      50% { transform: translateY(-3px) scale(1.02); box-shadow: 0 20px 50px rgba(0,123,255,0.3); }
+      100% { transform: translateY(0px) scale(1); box-shadow: 0 15px 40px rgba(0,0,0,0.25); }
+    }
+
+    /* Subheading inside card */
+    .result-box h2 {
       font-weight: 700;
       margin-bottom: 15px;
       color: #0b5ed7;
-      font-size: 2rem;
+      font-size: 1.8rem;
       letter-spacing: 1px;
     }
 
@@ -151,8 +178,9 @@
     /* Responsive */
     @media (max-width: 576px) {
       body { padding: 30px 15px; }
+      .main-heading { font-size: 1.8rem; margin-bottom: 25px; }
       .result-box { padding: 35px 25px; }
-      .result-box h1 { font-size: 1.6rem; }
+      .result-box h2 { font-size: 1.5rem; }
       .btn-success { font-size: 0.95rem; padding: 12px 24px; }
       .btn-outline-primary { padding: 10px 22px; }
     }
@@ -160,8 +188,11 @@
 </head>
 <body>
 
+  <!-- Main Heading -->
+  <div class="main-heading">Noorussalam Madrasa</div>
+
   <div class="result-box">
-    <h1>Final Examination Result 2025-26</h1>
+    <h2>Final Examination Result 2025-26</h2>
     <p>Click below to view your latest examination results.</p>
 
     <a href="coming-soon.html" 
@@ -170,10 +201,10 @@
        <i class="fa-solid fa-graduation-cap me-2"></i> Final Examination Result
     </a>
 
-    <a href="https://result.samastha.info/" 
+    <a href="coming-soon.html" 
        class="btn btn-success btn-lg w-100 mb-3" 
        target="_blank" rel="noopener noreferrer">
-       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Examination
+       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Exam
     </a>
 
     <div class="text-center mt-4">
@@ -190,7 +221,7 @@
     const rect = box.getBoundingClientRect();
     const centerX = rect.left + rect.width / 2;
     const centerY = rect.top + rect.height / 2;
-    const radius = Math.max(rect.width, rect.height) / 2 + 20; // distance from box
+    const radius = Math.max(rect.width, rect.height) / 2 + 20;
 
     const sparklesContainer = document.createElement('div');
     sparklesContainer.style.position = 'absolute';
