Fix HTML encoding issues in result.html

--- a/result.html
+++ b/result.html
@@ -204,7 +204,7 @@
     <a href="coming-soon.html" 
        class="btn btn-success btn-lg w-100 mb-3" 
        target="_blank" rel="noopener noreferrer">
-       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Exam
+       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Examination
     </a>
 
     <div class="text-center mt-4">
@@ -256,3 +256,4 @@
 
 </body>
 </html>
+
