--- a/result.html
+++ b/result.html
@@ -201,7 +201,7 @@
        <i class="fa-solid fa-graduation-cap me-2"></i> Final Examination Result
     </a>
 
-    <a href="coming-soon.html" 
+    <a href="https://result.samastha.info/" 
        class="btn btn-success btn-lg w-100 mb-3" 
        target="_blank" rel="noopener noreferrer">
        <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Examination
