--- a/result.html
+++ b/result.html
@@ -18,171 +18,124 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       font-family: 'Rubik', sans-serif;
-      background: linear-gradient(-45deg, #3a8cff, #0d6efd, #0056b3, #3a8cff);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-      padding: 40px 20px;
-      color: #fff;
-      overflow: hidden;
+      background: #f7f9fc;
+      color: #333;
+      padding: 20px;
+      overflow-x: hidden;
     }
 
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    /* Main Heading with animated gradient */
+    /* Main Heading */
     .main-heading {
-      font-size: 2.4rem;
-      font-weight: 800;
+      font-size: 2rem;
+      font-weight: 700;
       text-align: center;
-      margin-bottom: 30px;
-      letter-spacing: 1px;
-      background: linear-gradient(90deg, #ffce00, #0ff, #ff6f61, #00ff9f);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: glowGradient 5s ease infinite;
-      text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      margin: 40px 0 20px 0;
+      color: #0b5ed7;
     }
 
-    @keyframes glowGradient {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    /* Sparkles */
-    .sparkle {
-      position: absolute;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 50%;
-      width: 4px;
-      height: 4px;
-      opacity: 0.8;
-      pointer-events: none;
-    }
-
-    /* Result Box with pulsing glow */
+    /* Result Box */
     .result-box {
       position: relative;
-      z-index: 2;
-      background: rgba(255, 255, 255, 0.95);
+      background: linear-gradient(135deg, #ffffff, #e9f1ff);
       color: #333;
-      border-radius: 25px;
-      padding: 50px 35px;
+      border-radius: 20px;
+      padding: 40px 30px;
       text-align: center;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-      max-width: 500px;
+      max-width: 480px;
       width: 100%;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeInUp 0.8s forwards, pulseCard 3s ease-in-out infinite;
+      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      margin-bottom: 25px;
     }
 
     .result-box:hover {
-      transform: translateY(-5px) scale(1.02);
-      box-shadow: 0 25px 60px rgba(0,123,255,0.35);
+      transform: translateY(-5px);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.15);
     }
 
-    @keyframes fadeInUp {
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes pulseCard {
-      0% { transform: translateY(0px) scale(1); box-shadow: 0 15px 40px rgba(0,0,0,0.25); }
-      50% { transform: translateY(-3px) scale(1.02); box-shadow: 0 20px 50px rgba(0,123,255,0.3); }
-      100% { transform: translateY(0px) scale(1); box-shadow: 0 15px 40px rgba(0,0,0,0.25); }
-    }
-
-    /* Subheading inside card */
+    /* Subheading */
     .result-box h2 {
-      font-weight: 700;
+      font-weight: 600;
       margin-bottom: 15px;
+      font-size: 1.6rem;
       color: #0b5ed7;
-      font-size: 1.8rem;
-      letter-spacing: 1px;
     }
 
     .result-box p {
       color: #495057;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       font-size: 1rem;
     }
 
-    /* Buttons */
+    /* Gradient Buttons */
     .btn-success {
-      border-radius: 12px;
-      padding: 14px 32px;
-      font-size: 1.05rem;
+      border: none;
+      border-radius: 10px;
+      padding: 12px 25px;
+      font-size: 1rem;
       font-weight: 600;
-      transition: all 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-      overflow: hidden;
-      z-index: 1;
+      width: 100%;
+      margin-bottom: 15px;
+      color: #fff;
+      background: linear-gradient(90deg, #0d6efd, #3a8cff);
+      transition: all 0.3s ease;
     }
 
-    .btn-success::before {
-      content: "";
-      position: absolute;
-      top: -5px; left: -5px;
-      width: calc(100% + 10px);
-      height: calc(100% + 10px);
-      border-radius: 14px;
-      background: rgba(0, 123, 255, 0.4);
-      filter: blur(10px);
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      z-index: -1;
+    .btn-success:hover {
+      background: linear-gradient(90deg, #3a8cff, #0d6efd);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(0,123,255,0.3);
     }
 
-    .btn-success:hover::before { opacity: 1; }
-    .btn-success:hover { transform: translateY(-3px); box-shadow: 0 10px 25px rgba(0,123,255,0.5); }
-    .btn-success i { transition: text-shadow 0.3s ease; }
-    .btn-success:hover i { text-shadow: 0 0 10px rgba(255,255,255,0.8), 0 0 15px rgba(0,123,255,0.6); }
+    .btn-success i {
+      margin-right: 8px;
+    }
 
     /* Outline Button */
     .btn-outline-primary {
       border-radius: 10px;
-      padding: 12px 30px;
-      transition: all 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+      padding: 10px 20px;
+      font-weight: 500;
       color: #0d6efd;
       border-color: #0d6efd;
+      transition: all 0.3s ease;
     }
 
     .btn-outline-primary:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(0,123,255,0.3);
-      color: #fff;
       background-color: #0d6efd;
+      color: #fff;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0,123,255,0.2);
+    }
+
+    /* Tiny Sparkles */
+    .sparkle {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: rgba(255,255,255,0.8);
+      border-radius: 50%;
+      pointer-events: none;
+      opacity: 0.7;
     }
 
     /* Footer */
     footer {
       text-align: center;
-      color: rgba(255, 255, 255, 0.85);
+      color: #6c757d;
       font-size: 0.9rem;
-      margin-top: auto;
-      padding: 20px 0;
-      transition: color 0.3s ease, text-shadow 0.3s ease;
+      margin: 40px 0 20px 0;
     }
 
-    footer:hover { color: #fff; text-shadow: 0 0 5px #0d6efd; }
-
-    /* Responsive */
+    /* Mobile Responsive */
     @media (max-width: 576px) {
-      body { padding: 30px 15px; }
-      .main-heading { font-size: 1.8rem; margin-bottom: 25px; }
-      .result-box { padding: 35px 25px; }
-      .result-box h2 { font-size: 1.5rem; }
-      .btn-success { font-size: 0.95rem; padding: 12px 24px; }
-      .btn-outline-primary { padding: 10px 22px; }
+      .main-heading { font-size: 1.6rem; margin-top: 20px; }
+      .result-box { padding: 30px 20px; }
+      .result-box h2 { font-size: 1.4rem; }
+      .btn-success { font-size: 0.95rem; padding: 10px 20px; }
+      .btn-outline-primary { font-size: 0.95rem; padding: 8px 18px; }
     }
   </style>
 </head>
@@ -191,38 +144,29 @@
   <!-- Main Heading -->
   <div class="main-heading">Noorussalam Madrasa</div>
 
+  <!-- Result Box -->
   <div class="result-box">
     <h2>Final Examination Result 2025-26</h2>
     <p>Click below to view your latest examination results.</p>
 
-    <a href="coming-soon.html" 
-       class="btn btn-success btn-lg mb-3 w-100" 
-       target="_blank" rel="noopener noreferrer">
-       <i class="fa-solid fa-graduation-cap me-2"></i> Final Examination Result
+    <a href="coming-soon.html" class="btn btn-success">
+      <i class="fa-solid fa-graduation-cap"></i> Final Examination Result
     </a>
 
-    <a href="https://result.samastha.info/" 
-       class="btn btn-success btn-lg w-100 mb-3" 
-       target="_blank" rel="noopener noreferrer">
-       <i class="fa-solid fa-book-open-reader me-2"></i> Samastha Public Examination
+    <a href="https://result.samastha.info/" class="btn btn-success">
+      <i class="fa-solid fa-book-open-reader"></i> Samastha Public Examination
     </a>
 
-    <div class="text-center mt-4">
-      <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+    <div class="text-center mt-3">
+      <a href="index.html" class="btn btn-outline-primary">← Back to Home</a>
     </div>
   </div>
 
   <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
 
   <script>
-    // Swirling sparkles around result box
-    const sparkleCount = 40;
-    const box = document.querySelector('.result-box');
-    const rect = box.getBoundingClientRect();
-    const centerX = rect.left + rect.width / 2;
-    const centerY = rect.top + rect.height / 2;
-    const radius = Math.max(rect.width, rect.height) / 2 + 20;
-
+    // Create subtle sparkles
+    const sparkleCount = 25;
     const sparklesContainer = document.createElement('div');
     sparklesContainer.style.position = 'absolute';
     sparklesContainer.style.top = 0;
@@ -232,21 +176,27 @@
     sparklesContainer.style.pointerEvents = 'none';
     document.body.appendChild(sparklesContainer);
 
-    for (let i = 0; i < sparkleCount; i++) {
+    for(let i=0; i<sparkleCount; i++){
       const sparkle = document.createElement('div');
       sparkle.className = 'sparkle';
-      sparkle.style.width = 2 + Math.random() * 4 + 'px';
-      sparkle.style.height = sparkle.style.width;
+      sparkle.style.width = sparkle.style.height = Math.random() * 3 + 1 + 'px';
+      sparkle.style.top = Math.random() * window.innerHeight + 'px';
+      sparkle.style.left = Math.random() * window.innerWidth + 'px';
       sparklesContainer.appendChild(sparkle);
 
-      let angle = Math.random() * 2 * Math.PI;
-      let speed = 0.01 + Math.random() * 0.02;
-      let verticalOffset = Math.random() * 40;
+      let directionX = (Math.random() - 0.5) * 0.5;
+      let directionY = (Math.random() - 0.5) * 0.5;
 
       function animate() {
-        angle += speed;
-        const x = centerX + radius * Math.cos(angle);
-        const y = centerY + radius * Math.sin(angle) - verticalOffset * Math.sin(angle*2);
+        const rect = sparkle.getBoundingClientRect();
+        let x = rect.left + directionX;
+        let y = rect.top + directionY;
+
+        if(x < 0) x = window.innerWidth;
+        if(x > window.innerWidth) x = 0;
+        if(y < 0) y = window.innerHeight;
+        if(y > window.innerHeight) y = 0;
+
         sparkle.style.transform = `translate(${x}px, ${y}px)`;
         requestAnimationFrame(animate);
       }
@@ -256,4 +206,3 @@
 
 </body>
 </html>
-
