--- a/result.html
+++ b/result.html
@@ -12,7 +12,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <style>
-    /* Body & Background */
+    /* Animated Gradient Background */
     body {
       margin: 0;
       min-height: 100vh;
@@ -21,41 +21,66 @@
       justify-content: flex-start;
       align-items: center;
       font-family: 'Rubik', sans-serif;
-      background: #f7f9fc;
+      background: linear-gradient(120deg, #c3ecff, #0d6efd, #a0d2ff, #0a58ca);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
       color: #333;
       padding: 20px;
       overflow-x: hidden;
     }
 
-    /* Main Heading */
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    /* Headings */
     .main-heading {
       font-size: 2rem;
       font-weight: 700;
       text-align: center;
-      margin: 40px 0 20px 0;
-      color: #0b5ed7;
+      margin: 30px 0 10px 0;
+      color: #fff;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
+    .sub-heading {
+      font-size: 1.4rem;
+      font-weight: 600;
+      text-align: center;
+      color: #e0f0ff;
+      margin: 5px 0;
+      text-shadow: 0 1px 4px rgba(0,0,0,0.2);
+    }
+
+    .sub-heading-small {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #d0e4ff;
+      margin: 5px 0 30px 0;
+      text-shadow: 0 1px 3px rgba(0,0,0,0.15);
     }
 
     /* Result Box */
     .result-box {
       position: relative;
-      background: linear-gradient(135deg, #ffffff, #e9f1ff);
+      background: rgba(255,255,255,0.95);
       color: #333;
       border-radius: 20px;
       padding: 40px 30px;
       text-align: center;
       max-width: 480px;
       width: 100%;
-      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.15);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .result-box:hover {
       transform: translateY(-5px);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.2);
     }
 
-    /* Subheading */
     .result-box h2 {
       font-weight: 600;
       margin-bottom: 15px;
@@ -69,7 +94,7 @@
       font-size: 1rem;
     }
 
-    /* Gradient Buttons */
+    /* Buttons */
     .btn-success {
       border: none;
       border-radius: 10px;
@@ -89,11 +114,8 @@
       box-shadow: 0 6px 20px rgba(0,123,255,0.3);
     }
 
-    .btn-success i {
-      margin-right: 8px;
-    }
+    .btn-success i { margin-right: 8px; }
 
-    /* Outline Button */
     .btn-outline-primary {
       border-radius: 10px;
       padding: 10px 20px;
@@ -110,28 +132,20 @@
       box-shadow: 0 6px 15px rgba(0,123,255,0.2);
     }
 
-    /* Tiny Sparkles */
-    .sparkle {
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background: rgba(255,255,255,0.8);
-      border-radius: 50%;
-      pointer-events: none;
-      opacity: 0.7;
-    }
-
     /* Footer */
     footer {
       text-align: center;
-      color: #6c757d;
+      color: #fff;
       font-size: 0.9rem;
       margin: 40px 0 20px 0;
+      text-shadow: 0 1px 3px rgba(0,0,0,0.2);
     }
 
     /* Mobile Responsive */
     @media (max-width: 576px) {
-      .main-heading { font-size: 1.6rem; margin-top: 20px; }
+      .main-heading { font-size: 1.8rem; margin-top: 20px; }
+      .sub-heading { font-size: 1.2rem; }
+      .sub-heading-small { font-size: 0.95rem; }
       .result-box { padding: 30px 20px; }
       .result-box h2 { font-size: 1.4rem; }
       .btn-success { font-size: 0.95rem; padding: 10px 20px; }
@@ -141,8 +155,10 @@
 </head>
 <body>
 
-  <!-- Main Heading -->
-  <div class="main-heading">Noorussalam Madrasa</div>
+  <!-- Headings -->
+  <div class="main-heading">RESULT PORTAL</div>
+  <div class="sub-heading">NOORUSSALAM MADRASA</div>
+  <div class="sub-heading-small">KAMBIPPALAM-KERALA ESTATE</div>
 
   <!-- Result Box -->
   <div class="result-box">
@@ -163,46 +179,6 @@
   </div>
 
   <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
-
-  <script>
-    // Create subtle sparkles
-    const sparkleCount = 25;
-    const sparklesContainer = document.createElement('div');
-    sparklesContainer.style.position = 'absolute';
-    sparklesContainer.style.top = 0;
-    sparklesContainer.style.left = 0;
-    sparklesContainer.style.width = '100%';
-    sparklesContainer.style.height = '100%';
-    sparklesContainer.style.pointerEvents = 'none';
-    document.body.appendChild(sparklesContainer);
-
-    for(let i=0; i<sparkleCount; i++){
-      const sparkle = document.createElement('div');
-      sparkle.className = 'sparkle';
-      sparkle.style.width = sparkle.style.height = Math.random() * 3 + 1 + 'px';
-      sparkle.style.top = Math.random() * window.innerHeight + 'px';
-      sparkle.style.left = Math.random() * window.innerWidth + 'px';
-      sparklesContainer.appendChild(sparkle);
-
-      let directionX = (Math.random() - 0.5) * 0.5;
-      let directionY = (Math.random() - 0.5) * 0.5;
-
-      function animate() {
-        const rect = sparkle.getBoundingClientRect();
-        let x = rect.left + directionX;
-        let y = rect.top + directionY;
-
-        if(x < 0) x = window.innerWidth;
-        if(x > window.innerWidth) x = 0;
-        if(y < 0) y = window.innerHeight;
-        if(y > window.innerHeight) y = 0;
-
-        sparkle.style.transform = `translate(${x}px, ${y}px)`;
-        requestAnimationFrame(animate);
-      }
-      animate();
-    }
-  </script>
 
 </body>
 </html>
