--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
       color: #0b1a3b;
     }
 
+    /* Round social buttons */
     .social-btn .btn {
       border-radius: 50%;
       width: 40px;
@@ -90,16 +91,26 @@
       font-size: 14px;
     }
 
+    /* Fade animation for alert */
+    .fade-alert {
+      opacity: 0;
+      transition: opacity 0.6s ease-in-out;
+    }
+    .fade-alert.show {
+      opacity: 1;
+    }
+
+    /* Custom alert colors */
     .alert-success {
-      background-color: #003366;
-      color: #00ff99;
-      border: 1px solid #00ff99;
+      background-color: #003366 !important;
+      color: #00ff99 !important;
+      border: 1px solid #00ff99 !important;
     }
 
     .alert-danger {
-      background-color: #330000;
-      color: #ff6666;
-      border: 1px solid #ff6666;
+      background-color: #330000 !important;
+      color: #ff6666 !important;
+      border: 1px solid #ff6666 !important;
     }
   </style>
 </head>
@@ -124,10 +135,16 @@
             <li><i class="fa-solid fa-location-dot text-warning me-2"></i> Kambippalam - Kerala Estate</li>
             <li><i class="fa-solid fa-envelope text-warning me-2"></i> noorussalam6110@gmail.com</li>
           </ul>
+
+          <!-- Social Icons (Facebook, Instagram, WhatsApp) -->
           <div class="mt-4 social-btn">
             <a class="btn me-2" href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a class="btn me-2" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="btn me-2" href="https://wa.me/917034678818" target="_blank">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
           </div>
+
         </div>
 
         <!-- Contact Form -->
@@ -139,6 +156,8 @@
             <div class="mb-3"><textarea class="form-control" id="cmsg" rows="4" placeholder="Message" required></textarea></div>
             <button class="btn btn-primary w-100">Send Message</button>
           </form>
+
+          <!-- Alert Box -->
           <div id="contactAlert" class="mt-3" style="display:none"></div>
         </div>
 
@@ -158,30 +177,47 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <script>
     function submitContact(e){
       e.preventDefault();
+
       const name = document.getElementById('cname').value.trim();
       const email = document.getElementById('cemail').value.trim();
       const msg = document.getElementById('cmsg').value.trim();
+
       if(!name || !email || !msg){
         showAlert('contactAlert','Please complete all fields.','danger');
         return false;
       }
-      showAlert('contactAlert','Message sent successfully. Thank you, '+name+'!','success');
+
+      showAlert('contactAlert','Message sent successfully. Thank you, ' + name + '!','success');
       e.target.reset();
       return false;
     }
 
-    function showAlert(id,msg,type){
+    function showAlert(id, msg, type) {
       const el = document.getElementById(id);
+
       el.style.display = 'block';
       el.className = '';
-      el.classList.add('alert','mt-3');
-      el.classList.add('alert-'+(type==='success'?'success':'danger'));
+      el.classList.add('alert', 'mt-3', 'fade-alert');
+      el.classList.add('alert-' + (type === 'success' ? 'success' : 'danger'));
       el.textContent = msg;
-      setTimeout(()=>{ el.style.display='none'; },5000);
+
+      setTimeout(() => {
+        el.classList.add('show'); // Fade-in
+      }, 50);
+
+      setTimeout(() => {
+        el.classList.remove('show'); // Fade-out
+      }, 5000);
+
+      setTimeout(() => {
+        el.style.display = 'none';
+      }, 5600);
     }
   </script>
+
 </body>
 </html>
