--- a/faculties.html
+++ b/faculties.html
@@ -1,141 +1,382 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Faculties | Noorussalam Madrasa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #0b1d3a;
-      color: #f8f9fa;
-      font-family: 'Poppins', sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Our Faculties | Noorussalam Madrasa</title>
 
-    header {
-      background: linear-gradient(90deg, #0d47a1, #1976d2);
-    }
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    h2, h4, h6 {
-      color: #fff;
-    }
+<!-- Bootstrap Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    .faculty-card {
-      background-color: #10264d;
-      border: none;
-      border-radius: 15px;
-      transition: transform 0.3s, box-shadow 0.3s;
-      padding: 20px 10px;
-      height: 100%;
-    }
+<!-- AOS (Scroll Animations) -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    .faculty-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(255, 215, 0, 0.2);
-    }
+<style>
+/* ----------------------------------------------------------
+    GLOBAL PAGE + ANIMATED GRADIENT BACKGROUND
+----------------------------------------------------------- */
+body {
+  font-family: 'Poppins', sans-serif;
+  color: #f8f9fa;
+  background: linear-gradient(135deg,#071a3d,#0b214a,#0f2d5f,#0a1c38);
+  background-size: 400% 400%;
+  animation: gradientBG 16s ease infinite;
+  margin: 0;
+  overflow-x: hidden;
+}
 
-    .faculty-card img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #ffd700;
-    }
+@keyframes gradientBG {
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 50%;}
+  100% {background-position:0% 50%;}
+}
 
-    .faculty-about {
-      font-size: 0.9rem;
-      color: #d0d3d8;
-      margin-top: 8px;
-      min-height: 60px;
-    }
+/* ----------------------------------------------------------
+    FLOATING BACKGROUND ORBS
+----------------------------------------------------------- */
+.orb {
+  position: fixed;
+  width: 160px;
+  height: 160px;
+  background: rgba(0,150,255,0.15);
+  border-radius: 50%;
+  filter: blur(40px);
+  animation: floatOrb 18s infinite ease-in-out;
+  z-index: -1;
+}
 
-    .btn-outline-primary {
-      border-color: #ffd700;
-      color: #ffd700;
-    }
+@keyframes floatOrb {
+  0% {transform: translateY(0) translateX(0);}
+  50% {transform: translateY(-80px) translateX(60px);}
+  100% {transform: translateY(0) translateX(0);}
+}
 
-    .btn-outline-primary:hover {
-      background-color: #ffd700;
-      color: #0b1d3a;
-    }
+.orb2 {
+  left: 70%;
+  top: 40%;
+  animation-duration: 22s;
+}
+.orb3 {
+  left: 20%;
+  top: 70%;
+  animation-duration: 26s;
+}
 
-    footer {
-      background: #06142c;
-    }
-  </style>
+/* ----------------------------------------------------------
+    STAR PARTICLE BACKGROUND
+----------------------------------------------------------- */
+.stars {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url('https://i.ibb.co/ZmNsB8R/stars.png');
+  animation: starMove 90s linear infinite;
+  z-index: -1;
+  opacity: .3;
+}
+
+@keyframes starMove {
+  from { background-position: 0 0; }
+  to { background-position: 2000px 2000px; }
+}
+
+/* ----------------------------------------------------------
+    HEADER GLASS + GLOW
+----------------------------------------------------------- */
+header {
+  backdrop-filter: blur(10px);
+  background: rgba(10, 30, 60, 0.45);
+  border-bottom: 1px solid rgba(255,255,255,0.05);
+  box-shadow: 0 0 20px rgba(0,150,255,0.3);
+}
+
+/* ----------------------------------------------------------
+    FACULTY CARD — GLASS + NEON GLOW
+----------------------------------------------------------- */
+.faculty-card {
+  background: rgba(255,255,255,0.08);
+  border-radius: 18px;
+  padding: 20px 15px;
+  border: 1px solid rgba(255,255,255,0.15);
+  backdrop-filter: blur(12px);
+  transition: .4s ease;
+  box-shadow: 0 0 15px rgba(0,150,255,0.15);
+}
+
+.faculty-card:hover {
+  transform: translateY(-7px) scale(1.03);
+  box-shadow: 0 0 25px rgba(0,150,255,0.4),
+              0 0 60px rgba(255,215,0,0.2);
+}
+
+/* PROFILE IMAGE NEON */
+.faculty-card img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #ffd700;
+  box-shadow: 0 0 20px rgba(255,215,0,0.5);
+  animation: popImage 1s;
+}
+
+@keyframes popImage {
+  0% {transform: scale(0.4); opacity:0;}
+  100% {transform: scale(1); opacity:1;}
+}
+
+/* ----------------------------------------------------------
+    SOCIAL ICONS — NEON PULSE
+----------------------------------------------------------- */
+.social-buttons a {
+  font-size: 1.4rem;
+  margin: 0 8px;
+  transition: 0.25s;
+  animation: iconPulse 3s infinite ease-in-out;
+}
+
+@keyframes iconPulse {
+  0%,100% { filter: drop-shadow(0 0 0px transparent); }
+  50% { filter: drop-shadow(0 0 12px rgba(255,255,255,0.8)); }
+}
+
+.social-buttons a:hover {
+  transform: scale(1.4);
+}
+
+/* Icon Colors */
+.whatsapp {color:#25D366;}
+.instagram {color:#E1306C;}
+.facebook {color:#1877F2;}
+.x {color:#fff;}
+.telegram {color:#0088cc;}
+
+/* ----------------------------------------------------------
+    WHATSAPP FULL BUTTON
+----------------------------------------------------------- */
+.wa-btn {
+  border-radius: 30px;
+  padding: 7px 0;
+  background-color: #25D366;
+  color: #fff;
+  font-weight: 600;
+  transition: .3s;
+  box-shadow: 0 0 12px rgba(37,211,102,0.4);
+}
+
+.wa-btn:hover {
+  transform: scale(1.06);
+  background-color: #1ebe5d;
+  box-shadow: 0 0 18px #25D366;
+}
+
+/* ----------------------------------------------------------
+    FLOATING WHATSAPP BUTTON
+----------------------------------------------------------- */
+.floating-wa {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  background-color: #25D366;
+  color: #fff;
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:2rem;
+  z-index:999;
+  box-shadow:0 0 16px rgba(0,0,0,0.4);
+  animation:bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%,100% { transform: translateY(0);}
+  50% {transform:translateY(-10px);}
+}
+
+.floating-wa:hover {
+  transform:scale(1.15);
+  box-shadow:0 0 20px #25D366;
+}
+
+/* ----------------------------------------------------------
+    BACK TO TOP BUTTON
+----------------------------------------------------------- */
+#backTop {
+  position: fixed;
+  bottom: 95px;
+  right: 26px;
+  background: #007bff;
+  color:#fff;
+  padding:14px 17px;
+  border-radius:50%;
+  font-size:1.4rem;
+  display:none;
+  box-shadow:0 0 15px rgba(0,123,255,0.4);
+  transition:0.3s;
+  z-index:998;
+}
+
+#backTop:hover {
+  transform:scale(1.15);
+  box-shadow:0 0 22px #007bff;
+}
+
+</style>
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="text-white text-center py-4 shadow-sm">
-    <h2 class="mb-1">Our Faculties</h2>
-    <p class="mb-0 text-light">Meet our dedicated and inspiring teaching staff</p>
-  </header>
+<!-- FLOATING ORBS -->
+<div class="orb"></div>
+<div class="orb orb2"></div>
+<div class="orb orb3"></div>
 
-  <!-- FACULTIES SECTION -->
-  <section id="faculties" class="py-5">
-    <div class="container">
-      <div class="row g-4">
+<!-- STAR BACKGROUND -->
+<div class="stars"></div>
 
-        <!-- Faculty 1 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Suhail P">
-            <h6 class="fw-bold mt-3">SUHAIL P</h6>
-            <small class="text-warning d-block">SWADAR MUALLIM</small>
-            <small class="d-block text-light">📞 7034678818</small>
-            <p class="faculty-about">A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
+<!-- FLOATING WHATSAPP -->
+<a href="https://wa.me/7034678818" class="floating-wa"><i class="bi bi-whatsapp"></i></a>
+
+<!-- BACK TO TOP BUTTON -->
+<div id="backTop"><i class="bi bi-chevron-up"></i></div>
+
+<!-- HEADER -->
+<header class="text-white text-center py-4">
+  <h2 class="mb-1" data-aos="zoom-in">Our Faculties</h2>
+  <p data-aos="fade-up" class="text-light">Meet our dedicated and inspiring teaching staff</p>
+</header>
+
+
+<!-- FACULTIES -->
+<section class="py-5">
+  <div class="container">
+    <div class="row g-4">
+
+      <!-- ========= FACULTY CARD TEMPLATE (repeat same pattern) ========= -->
+      
+      <!-- Faculty 1 -->
+      <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up">
+        <div class="faculty-card text-center">
+          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg">
+          <h6 class="fw-bold mt-3">SUHAIL P</h6>
+          <small class="text-warning">SWADAR MUALLIM</small>
+          <small class="d-block text-light">📞 7034678818</small>
+
+          <p class="faculty-about">
+            A passionate educator known for guiding students with care.
+          </p>
+
+          <a href="https://wa.me/7034678818" class="wa-btn d-block mx-3 mb-3">Message on WhatsApp</a>
+
+          <div class="social-buttons">
+            <a href="#" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+            <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
           </div>
         </div>
-
-        <!-- Faculty 2 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Firos Faizy">
-            <h6 class="fw-bold mt-3">FIROS FAIZY AK</h6>
-            <small class="text-warning d-block">TEACHER</small>
-            <small class="d-block text-light">📞 9645134854</small>
-            <p class="faculty-about">Dedicated to fostering a love for learning and nurturing discipline through compassionate teaching.</p>
-          </div>
-        </div>
-
-        <!-- Faculty 3 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Darimi Usthad">
-            <h6 class="fw-bold mt-3">DARIMI USTHAD</h6>
-            <small class="text-warning d-block">TEACHER</small>
-            <small class="d-block text-light">📞 8078055520</small>
-            <p class="faculty-about">An experienced teacher with deep knowledge of Islamic studies and a calm, inspiring teaching style.</p>
-          </div>
-        </div>
-
-        <!-- Faculty 4 -->
-        <div class="col-6 col-md-4 col-lg-3">
-          <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Fairoosudheen Aslami">
-            <h6 class="fw-bold mt-3">FAIROOSUDHEEN ASLAMI</h6>
-            <small class="text-warning d-block">TEACHER</small>
-            <small class="d-block text-light">📞 9497349254</small>
-            <p class="faculty-about">Brings enthusiasm and innovation into the classroom, inspiring students to excel in both academics and values.</p>
-          </div>
-        </div>
-
       </div>
 
-      <!-- BACK TO HOME -->
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      <!-- Faculty 2 -->
+      <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="150">
+        <div class="faculty-card text-center">
+          <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg">
+          <h6 class="fw-bold mt-3">FIROS FAIZY AK</h6>
+          <small class="text-warning">TEACHER</small>
+          <small class="d-block text-light">📞 9645134854</small>
+
+          <p class="faculty-about">Dedicated to fostering a love for learning.</p>
+
+          <a href="https://wa.me/9645134854" class="wa-btn d-block mx-3 mb-3">Message on WhatsApp</a>
+
+          <div class="social-buttons">
+            <a href="#" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+            <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+          </div>
+        </div>
       </div>
+
+      <!-- Faculty 3 -->
+      <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
+        <div class="faculty-card text-center">
+          <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg">
+          <h6 class="fw-bold mt-3">DARIMI USTHAD</h6>
+          <small class="text-warning">TEACHER</small>
+          <small class="d-block text-light">📞 8078055520</small>
+
+          <p class="faculty-about">An experienced teacher with deep knowledge.</p>
+
+          <a href="https://wa.me/8078055520" class="wa-btn d-block mx-3 mb-3">Message on WhatsApp</a>
+
+          <div class="social-buttons">
+            <a href="#" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+            <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Faculty 4 -->
+      <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="450">
+        <div class="faculty-card text-center">
+          <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg">
+          <h6 class="fw-bold mt-3">FAIROOSUDHEEN ASLAMI</h6>
+          <small class="text-warning">TEACHER</small>
+          <small class="d-block text-light">📞 9497349254</small>
+
+          <p class="faculty-about">Brings enthusiasm and innovation.</p>
+
+          <a href="https://wa.me/9497349254" class="wa-btn d-block mx-3 mb-3">Message on WhatsApp</a>
+
+          <div class="social-buttons">
+            <a href="#" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
+            <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </section>
 
-  <!-- FOOTER -->
-  <footer class="text-white text-center py-3 mt-4">
-    <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
-  </footer>
+    <div class="text-center mt-5">
+      <a href="index.html" class="btn btn-outline-light px-4">← Back to Home</a>
+    </div>
+  </div>
+</section>
+
+
+<footer class="text-white text-center py-3">
+  <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
+</footer>
+
+<!-- AOS Script -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init({
+  duration: 900,
+  offset: 50
+});
+
+/* Back To Top */
+const backTop = document.getElementById("backTop");
+window.addEventListener("scroll", () => {
+  backTop.style.display = window.scrollY > 500 ? "block" : "none";
+});
+backTop.onclick = () => window.scrollTo({top:0, behavior:"smooth"});
+</script>
 
 </body>
 </html>
-
-
